docs/logs/check_ai_core.txt
    Checking fusion-ai-core v0.1.0 (C:\Projects\Fusion - Programming Language\antigravity\playground\neon-magnetar\crates\ai-core)
error[E0583]: file not found for module `adapters`
 --> crates\ai-core\src\adapter.rs:5:1
  |
5 | pub mod adapters;
  | ^^^^^^^^^^^^^^^^^
  |
  = help: to create the module `adapters`, create file "crates\ai-core\src\adapter\adapters.rs" or "crates\ai-core\src\adapter\adapters\mod.rs"
  = note: if there is a `mod adapters` elsewhere in the crate already, import it with `use crate::...` instead

warning: unused import: `fusion_core::ast::Program`
 --> crates\ai-core\src\workspace.rs:2:5
  |
2 | use fusion_core::ast::Program;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0369]: binary operation `>=` cannot be applied to type `SafetyLevel`
  --> crates\ai-core\src\safety.rs:97:37
   |
97 |         let requires_review = level >= SafetyLevel::Medium;
   |                               ----- ^^ ------------------- SafetyLevel
   |                               |
   |                               SafetyLevel
   |
note: an implementation of `PartialOrd` might be missing for `SafetyLevel`
  --> crates\ai-core\src\safety.rs:5:1
   |
 5 | pub enum SafetyLevel {
   | ^^^^^^^^^^^^^^^^^^^^ must implement `PartialOrd`
help: consider annotating `SafetyLevel` with `#[derive(PartialEq, PartialOrd)]`
   |
 5 + #[derive(PartialEq, PartialOrd)]
 6 | pub enum SafetyLevel {
   |

Some errors have detailed explanations: E0369, E0583.
For more information about an error, try `rustc --explain E0369`.
warning: `fusion-ai-core` (lib) generated 1 warning
error: could not compile `fusion-ai-core` (lib) due to 2 previous errors; 1 warning emitted
